feat: adiciona estrutura do menu lateral e logo

--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -1,7 +1,5 @@
 <div class="overview">
-    <section class="overview__menu">
-        Menu
-    </section>
+    <app-menu class="overview__menu" />
     <header class="overview__header">
         Header
     </header>
