--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,13 @@
 @import 'styles/colors.scss';
 
 
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: "Inter", sans-serif;
     background-color: $main-bg;
