--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -14,3 +14,67 @@ $special-bg3: rgba(255, 255, 255, 0.08);
 $red: #E73D1C;
 $green: #4DAF6E;
 $main-bg: #F4F5F7;
+
+.primary {
+    background-color: $primary-color;
+}
+
+.secondary {
+    background-color: $secondary-color;
+}
+
+.default-black {
+    background-color: $default-black;
+}
+
+.white {
+    background-color: $white;
+}
+
+.gray-1 {
+    background-color: $gray-1;
+}
+
+.gray-2 {
+    background-color: $gray-2;
+}
+
+.gray-3 {
+    background-color: $gray-3;
+}
+
+.gray-4 {
+    background-color: $gray-4;
+}
+
+.gray-5 {
+    background-color: $gray-5;
+}
+
+.gray-6 {
+    background-color: $gray-6;
+}
+
+.special-bg {
+    background-color: $special-bg;
+}
+
+.special-bg2 {
+    background-color: $special-bg2;
+}
+
+.special-bg3 {
+    background-color: $special-bg3;
+}
+
+.red {
+    background-color: $red;
+}
+
+.green {
+    background-color: $green;
+}
+
+.main-bg {
+    background-color: $main-bg;
+}
