--- a/src/app/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/overview.component.scss
@@ -1,10 +1,10 @@
 .overview {
     display: grid;
-    grid-template-columns: 2fr 3fr 5fr;
+    grid-template-columns: 1.36fr 3fr 5fr;
     grid-template-rows: repeat(4, 1fr);
+    height: 100%;
 
     &__menu {
-        background-color: darkcyan;
         grid-column: 1 / 2;
         grid-row: 1 / 5;
     }
