--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 $font-light: 300;
 $font-regular: 400;
@@ -74,4 +75,18 @@ $font-exbold: 800;
     &-header {
         @include text-style($font-regular, 22px, 32px);
     }
+}
+
+.text-logo-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: $font-regular;
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.text-exbold-bold {
+    font-family: "Poppins", sans-serif;
+    font-weight: $font-exbold;
+    font-size: 24px;
+    line-height: 32px;
 }
