feat: adiciona botão de logout ao menu

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -8,7 +8,7 @@
     </nav>
 
     <footer class="menu__footer">
-        <p>Logout</p>
+        <app-logout-button />
         <div>Divider</div>
         <p>Perfil</p>
     </footer>
