feat: adiciona divider e separa modulos

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -2,14 +2,15 @@
     <app-menu-logo class="menu__logo" />
     <nav class="menu__items text-semibold-16-24">
         <ng-container *ngFor="let item of menuItems">
-            <app-menu-item class="menu__item" [image]="item.image" [isSelected]="item.isSelected" (click)="onClickMenuItem(item)">{{ item.title
+            <app-menu-item class="menu__item" [image]="item.image" [isSelected]="item.isSelected"
+                (click)="onClickMenuItem(item)">{{ item.title
                 }}</app-menu-item>
         </ng-container>
     </nav>
 
     <footer class="menu__footer">
         <app-logout-button />
-        <div>Divider</div>
+        <div class="menu__divider divider"></div>
         <p>Perfil</p>
     </footer>
 </section>
