--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import 'styles/reset.scss';
 @import 'styles/fonts.scss';
 @import 'styles/colors.scss';
-
+@import 'styles/divider.scss';
 
 html,
 body {
