feat: adiciona componente de perfil ao menu

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -11,6 +11,6 @@
     <footer class="menu__footer">
         <app-logout-button />
         <div class="menu__divider divider"></div>
-        <p>Perfil</p>
+        <app-menu-profile />
     </footer>
 </section>
