refact: adiciona inputs

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -11,6 +11,6 @@
     <footer class="menu__footer">
         <app-logout-button />
         <div class="menu__divider divider"></div>
-        <app-menu-profile />
+        <app-menu-profile profileName="Tanzir Rahman" image="assets/images/profile.png"/>
     </footer>
 </section>
