--- a/src/app/shared/components/menu-profile/menu-profile.component.html
+++ b/src/app/shared/components/menu-profile/menu-profile.component.html
@@ -1,7 +1,7 @@
 <div class="menu-profile">
-    <img src="assets/images/profile.png" class="menu-profile__image">
+    <img [src]="image" class="menu-profile__image">
     <div class="menu-profile__text-container">
-        <p class="text-semibold-16-24">Tanzir Rahman</p>
+        <p class="text-semibold-16-24">{{ profileName }}</p>
         <p class="text-regular-12-16 menu-profile__small-text">View profile</p>
     </div>
     <img src="assets/icons/three-dots.svg">
