feat: adiciona efeito ao passar o mouse sobre o item do menu

--- a/src/app/shared/components/menu/menu-item/menu-item.component.html
+++ b/src/app/shared/components/menu/menu-item/menu-item.component.html
@@ -1,6 +1,8 @@
 <div [class]="{
     'menu-item': true,
-    'primary': isSelected
+    'primary': isSelected,
+    'menu-item__selected': isSelected,
+    'menu-item__not-selected': !isSelected,
 }" (click)="onClickHandler()">
     <img [src]="image" class="menu-item__image">
     <div [class]="{
