--- a/src/app/shared/components/menu/menu-item/menu-item.component.scss
+++ b/src/app/shared/components/menu/menu-item/menu-item.component.scss
@@ -1,12 +1,24 @@
+@import '../../../../../styles/colors.scss';
+
 .menu-item {
     display: flex;
     padding: 10px 16px;
     border-radius: 3px;
     cursor: pointer;
     width: 100%;
+    transition: background-color 0.6s ease;
+
+    &__selected {
+        cursor: default;
+    }
+
+    &__not-selected:hover {
+        background-color: $special-bg3;
+    }
 
     &__image {
         margin-right: 10px;
-        size: 24px;
+        width: 24px;
+        height: 24px;
     }
 }
