feat: adiciona estrutura inicial do componente header

--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -1,8 +1,6 @@
 <div class="overview">
     <app-menu class="overview__menu" />
-    <header class="overview__header">
-        Header
-    </header>
+    <app-header class="overview__header" />
     <section class="overview__top-content">
         Top Content
     </section>
