--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -1,6 +1,6 @@
 <div class="overview">
     <app-menu class="overview__menu" />
-    <app-header class="overview__header" />
+    <app-header class="overview__header" name="Tanzir" />
     <section class="overview__top-content">
         Top Content
     </section>
