refact: extrai componente de pesquisa

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,9 +7,6 @@
 
     <div class="header__right-container">
         <img src="assets/icons/notification.svg" class="header__notification-icon">
-        <div class="header__search-box">
-            <input type="text" placeholder="Search here" class="text-regular-16-24">
-            <img src="assets/icons/search.svg">
-        </div>
+        <app-search-input />
     </div>
 </header>
