--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,10 @@
 <header class="header">
     <div class="header__left-container">
-        <h1 class="text-bold-24-28">Hello {{ name }}</h1>
-        <img src="assets/icons/chevrons-right.svg" class="header__left-icon">
-        <p class="header__date text-regular-14-20">{{ date | date : 'MMM dd, YYYY' }}</p>
+        <h1 class="text-bold-24-28 header__hello" [ngClass]="{ 'hide': !showHello }">Hello {{ name }}</h1>
+        <div class="header__date-container" [ngClass]="{ 'move-left': !showHello }">
+            <img src="assets/icons/chevrons-right.svg">
+            <p class="text-regular-14-20">{{ date | date : 'MMM dd, YYYY' }}</p>
+        </div>
     </div>
 
     <div class="header__right-container">
