--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -11,12 +11,27 @@
         margin: 0 auto 0 0;
     }
 
-    &__left-icon {
-        margin-left: 16px;
+    &__hello {
+        margin-right: 16px;
+        transition: opacity 0.5s ease, transform 0.5s ease;
+        opacity: 1;
+        transform: translateX(0);
+
+        &.hide {
+            opacity: 0;
+            transform: translateY(50%);
+        }
     }
 
-    &__date {
+    &__date-container {
+        display: flex;
+        align-items: center;
         color: $gray-3;
+        transform: translateX(0);
+
+        &.move-left {
+            transform: translateX(-140%);
+        }
     }
 
     &__right-container {
