--- a/src/app/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/overview.component.scss
@@ -1,12 +1,16 @@
 .overview {
+    height: 100%;
     display: grid;
     grid-template-columns: 1.36fr 3fr 5fr;
     grid-template-rows: 0.25fr repeat(3, 1fr);
-    height: 100%;
 
     &__menu {
         grid-column: 1 / 2;
         grid-row: 1 / 5;
+    }
+
+    &__content {
+        padding: 16px 20px;
     }
 
     &__header {
@@ -15,7 +19,6 @@
     }
 
     &__top-content {
-        background-color: navy;
         grid-column: 2 / 4;
         grid-row: 2 / 3;
     }
