feat: adiciona componente balance card

--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -2,9 +2,7 @@
     <app-menu class="overview__menu" />
     <app-header class="overview__header overview__content" name="Tanzir" [showHello]="true" />
     <section class="overview__top-content overview__content">
-        <app-resume-card title="Total Balance">
-            <p>Content</p>
-        </app-resume-card>
+        <app-balance-card />
     </section>
     <section class="overview__recent-transactions overview__content">
         Recent Transactions
