feat: adiciona v1 do componente de Goals

--- a/src/app/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/overview.component.scss
@@ -21,6 +21,7 @@
     &__top-content {
         grid-column: 2 / 4;
         grid-row: 2 / 3;
+        display: flex;
     }
 
     &__recent-transactions {
