--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
-$primary-color: #299D91;
-$secondary-color: #525256;
+$primary: #299D91;
+$secondary: #525256;
 $default-black: #191919;
 $white: #FFFFFF;
 $gray-1: #666666;
@@ -16,11 +16,11 @@ $green: #4DAF6E;
 $main-bg: #F4F5F7;
 
 .primary {
-    background-color: $primary-color;
+    background-color: $primary;
 }
 
 .secondary {
-    background-color: $secondary-color;
+    background-color: $secondary;
 }
 
 .default-black {
