--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -94,11 +94,11 @@ $font-exbold: 800;
 
 // Font colors
 .text-primary {
-    color: $primary-color;
+    color: $primary;
 }
 
 .text-secondary {
-    color: $secondary-color;
+    color: $secondary;
 }
 
 .text-default-black {
