--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -3,6 +3,7 @@
     <app-header class="overview__header overview__content" name="Tanzir" [showHello]="true" />
     <section class="overview__top-content overview__content">
         <app-balance-card />
+        <app-goals-card />
     </section>
     <section class="overview__recent-transactions overview__content">
         Recent Transactions
